--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
     </header>
     <section>
         <h1>Awe Sedrick. Welcome to the website</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ipsa rem cupiditate vitae necessitatibus maxime? Deserunt nulla commodi ea tenetur beatae dolor eveniet ipsa autem. Fugiat tenetur earum maxime voluptatibus!
+            hello cool okay please man wat go on here warrahell 
+        </p>
     </section>
     <section>
         <h2>Home</h2>
+        <p>warrahell i hate this work</p>
     </section>
     <section>
         <h3>About</h3>
